--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header .list ul li a:hover{
 /* start home */
 .home{
     width: 100vw;
-    height: 75vh;
+    height: 73vh;
 }
 .home section{
     width: 100%;
@@ -216,6 +216,7 @@ input[type='radio']{
     color: var(--color5);
     font-size: 1.2rem;
     font-weight: 700;
+    padding: 0 2%;
 }
 /* end home */
 
@@ -395,10 +396,11 @@ input[type='radio']{
 /* end contact */
 /* start footer */
 footer{
-    width: 98vw;
-    height: 8vh;
+    width: 100vw;
+    height: 10vh;
     margin: 2vh auto 0;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     color: var(--color6);
