--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,8 @@ header .list ul li a:hover{
     align-items: center;
 }
 .home section .slider{
-    width: 60%;
-    height: 90%;
+    width: 55%;
+    height: 60%;
     margin: 0 2vw;
     overflow: hidden;
     position: relative;
@@ -103,6 +103,7 @@ header .list ul li a:hover{
     width: 400%;
     height: 100%;
     display: flex;
+    border-radius: 10%;
 }
 input[type='radio']{
     display: none;
@@ -112,10 +113,12 @@ input[type='radio']{
     height: 100%;
     transition: 2s;
     position: relative;
+    border-radius: 10%;
 }
 .home .slider .slide img{
     width: 100%;
-    height: 100%;
+    height: max-content;
+    border-radius: 10%;
 }
 .home .slider .slide:first-of-type::before{
     content: 'أمن المكاتب';
