--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ input[type='radio']{
 }
 .home .slider .slide img{
     width: 100%;
-    height: max-content;
+    height: 100%;
     border-radius: 10%;
 }
 .home .slider .slide:first-of-type::before{
